@@ -2,8 +2,6 @@ Release 0.4
 
 ADDITIONAL MATCHERS:
 
-- toBeFalse()
-
 - toBeInstanceOf()
 
 - toBeExtensible()
